--- a/pom.xml
+++ b/pom.xml
@@ -81,9 +81,9 @@
         </dependency>
         <!-- documentation -->
         <dependency>
-            <groupId>com.smoketurner</groupId>
+            <groupId>in.vectorpro.dropwizard</groupId>
             <artifactId>dropwizard-swagger</artifactId>
-            <version>2.0.0-1</version>
+            <version>2.0.28-1</version>
         </dependency>
     </dependencies>
 
